# the-show

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSION_NOTES.md  adapters.py  cli.py  example_show.yaml  executor.py  loader.py  models.py  programme.py  pyproject.toml  rehearsal_adapter.py  requirements.txt  schema.py  state.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: sync-labels.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_add_v1_tables_delivery_artefacts_costs_.py
docs/: CNAME  OPERATOR_GUIDE.md  QUICKSTART.md  SS_The_Show_Spec_v0.4.1_LOCKED_18Apr26.md  SS_The_Show_Spec_v0.4.2_PATCH_19Apr26.md  THE_SHOW_PROGRAM_EXPLAINER.md  The_Show_v0.2_Spec.md  index.html
examples/: README.md  build-v1.0-release.yaml  curiosity-cat-launch-announcement.yaml  dubai-gala-night-of-show.yaml  festival-heat-coordination.yaml  hello.yaml
monitor/: cli.py  watcher.py
outputs/: prod-readiness-adapters-subagents_output.md
shows/: curiosity-cat-launch-brief.yaml
status/: runner-status.json
tests/: conftest.py  test_adapter_contracts.py  test_adapter_loading.py  test_channels_email.py  test_channels_sms.py  test_channels_telegram.py  test_channels_whatsapp.py  test_executor.py  test_link_server.py  test_llm_client.py  test_loader.py  test_monitor.py  test_per_scene_routing.py  test_rehearsal.py  test_resume.py  test_sanitise.py  test_skip_semantics.py  test_sqlalchemy_migration.py  test_state.py  test_urgent_contact.py  test_v042_patches.py
the_show/: __init__.py  adapters.py  cli.py  executor.py  loader.py  models.py  programme.py  sanitise.py  state.py
the_show/monitor/: cli.py  patterns.py  watcher.py
the_show/urgent_contact/: degradation.py  dispatcher.py  link_queue.py  link_server.py  parser.py  throttle.py
the_show/urgent_contact/channels/: adapter_base.py  config.py  email.py  gemini_adapter.py  mock.py  sms.py  telegram.py  whatsapp.py
urgent_contact/: auth.py  degradation.py  dispatcher.py  link_queue.py  link_server.py  throttle.py
urgent_contact/channels/: adapter_base.py  base.py  email.py  gemini_adapter.py  mock.py  sms.py  telegram.py  whatsapp.py
