[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "the-show"
dynamic = ["version"]
description = "The programme runtime for creative work. Theatrical orchestration with red-line approval gates and async cancellation across signed-link channels."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mark Cleary", email = "markscleary@gmail.com"},
]
keywords = ["orchestration", "agents", "creative", "workflow", "theatrical", "approval-gates"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyyaml>=6.0,<7.0",
    "requests>=2.31,<3.0",
    "httpx>=0.27,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "python-dotenv>=1.0,<2.0",
    "flask>=3.0,<4.0",
    "twilio>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
the-show = "the_show.cli:main"

[project.urls]
Homepage = "https://github.com/markscleary/the-show"
Source = "https://github.com/markscleary/the-show"
Documentation = "https://github.com/markscleary/the-show/blob/main/README.md"
Changelog = "https://github.com/markscleary/the-show/blob/main/CHANGELOG.md"
Issues = "https://github.com/markscleary/the-show/issues"

[tool.hatch.version]
path = "the_show/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["the_show"]

[tool.hatch.build.targets.sdist]
include = [
    "/the_show",
    "/tests",
    "/alembic",
    "/alembic.ini",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/VERSION",
    "/docs",
    "/examples",
]
exclude = [
    "/.venv",
    "/.show_state",
    "/.show_output",
    "/.pytest_cache",
    "/__pycache__",
    "/outputs",
    "/shows",
    "**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
